--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="apple-mobile-web-app-title" content="Geek Score" />
-  <meta name="keywords" content="board, games, dices, cards, board-games, geek, score, geekscore, gamer">
+  <meta name="keywords" content="board, games, dices, cards, board-games, geek, score, geek, score, geekscore, gamer">
   <meta name="description"
     content="An app for board games fans. It allows you to store your games, create teams and collect statistics.">
   <title>Geek Score</title>
@@ -34,9 +34,7 @@
     <strong>We're sorry but Geek Score doesn't work properly without JavaScript
       enabled. Please enable it to continue.</strong>
   </noscript>
-  <main>
-    <div id="app"></div>
-  </main>
+  <div id="app"></div>
 </body>
 
 </html>
