--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <!-- TODO:figure out -->
+  <!-- TODO:remove firebase ui -->
   <link rel="preload" as="style" type="text/css" onload="this.rel = 'stylesheet'"
     href="https://www.gstatic.com/firebasejs/ui/4.4.0/firebase-ui-auth.css" />
   <!-- <link type="text/css" rel='stylesheet' href="../src/assets/styles/firebase-ui.css" /> -->
