--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <!-- TODO:remove firebase ui -->
-  <link rel="preload" as="style" type="text/css" onload="this.rel = 'stylesheet'"
+  <link rel="preload" as="style" onload="this.rel = 'stylesheet'"
     href="https://www.gstatic.com/firebasejs/ui/4.4.0/firebase-ui-auth.css" />
-  <!-- <link type="text/css" rel='stylesheet' href="../src/assets/styles/firebase-ui.css" /> -->
+  <!-- <link  rel='stylesheet' href="../src/assets/styles/firebase-ui.css" /> -->
   <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png" />
+  <link rel="icon" sizes="32x32" href="/img/icons/favicon-32x32.png" />
+  <link rel="icon" sizes="16x16" href="/img/icons/favicon-16x16.png" />
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#ff9800" />
   <link rel='preload' as="style" onload="this.rel = 'stylesheet'"
