--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 
 <head>
-  <!-- TODO:remove firebase ui -->
   <link rel="preload" as="style" onload="this.rel = 'stylesheet'"
     href="https://www.gstatic.com/firebasejs/ui/4.4.0/firebase-ui-auth.css" />
-  <!-- <link  rel='stylesheet' href="../src/assets/styles/firebase-ui.css" /> -->
   <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png" />
   <link rel="icon" sizes="32x32" href="/img/icons/favicon-32x32.png" />
   <link rel="icon" sizes="16x16" href="/img/icons/favicon-16x16.png" />
@@ -16,7 +14,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="Accept-CH" content="DRP, Viewport-Width, Downlink" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta name="msapplication-TileImage" content="/img/icons/mstile-144x144.png" />
   <meta name="msapplication-TileColor" content="#3D3D3C" />
   <meta name="theme-color" content="#3D3D3C" />
